basic group chat participants info

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -134,4 +134,5 @@
     <string name="invalid_code_empty">Код активации не может быть пустым</string>
     <string name="choose_your_password_2">Введите Ваш пароль повторно</string>
     <string name="passcode_timing_how_to">Запрашивать пароль, в случае если приложение свернуто некоторое время</string>
+    <string name="add_member">Add member</string>
 </resources>
