--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -131,6 +131,9 @@
     <string name="wrong_password">Wrong password</string>
     <string name="autolock_disabled">Disabled</string>
     <string name="add_member">Add member</string>
+    <string name="delete_and_leave">Delete and leave</string>
+    <string name="notifications_enabled">Enabled</string>
+    <string name="notifications_disabled">Disabled</string>
     <plurals name="auto_lock_n_minutes">
         <item quantity="one">%1$d minute</item>
         <item quantity="other">%1$d minutes</item>
@@ -138,6 +141,17 @@
     <plurals name="auto_lock_n_hour">
         <item quantity="one">%1$d hour</item>
         <item quantity="other">%1$d hours</item>
+    </plurals>
+
+
+    <plurals name="mute_for_n_hours">
+        <item quantity="one">Mute for %1$d hour</item>
+        <item quantity="other">Mute for %1$d hours</item>
+    </plurals>
+
+    <plurals name="mute_for_n_days">
+        <item quantity="one">Mute for %1$d day</item>
+        <item quantity="other">Mute for %1$d days</item>
     </plurals>
 
     <!--<plurals name="user_status_last_seen_n_minutes_ago">-->
