--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -138,6 +138,11 @@
     <string name="delete_and_leave">Delete and leave</string>
     <string name="notifications_enabled">Включить</string>
     <string name="notifications_disabled">Выключить</string>
+    <string name="menu_share">Share</string>
+    <string name="menu_block">Block</string>
+    <string name="menu_unblock">Block</string>
+    <string name="menu_edit">Edit</string>
+    <string name="menu_delete_contact">Delete</string>
 
     <plurals name="mute_for_n_hours">
         <item quantity="one">Отключить уведомления на %1$d час</item>
