--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -139,6 +139,7 @@
     <string name="menu_unblock">Unblock</string>
     <string name="menu_edit">Edit</string>
     <string name="menu_delete_contact">Delete</string>
+    <string name="feature_unsupported">The feature will be supported in next release.</string>
     <plurals name="auto_lock_n_minutes">
         <item quantity="one">%1$d minute</item>
         <item quantity="other">%1$d minutes</item>
