--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -145,6 +145,7 @@
     <string name="menu_delete_contact">Delete</string>
 
     <string name="feature_unsupported">Эта функция будет доступна в следующей версии</string>
+    <string name="web_page">Web page</string>
 
     <plurals name="mute_for_n_hours">
         <item quantity="one">Отключить уведомления на %1$d час</item>
