--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -139,13 +139,13 @@
     <string name="notifications_enabled">Включить</string>
     <string name="notifications_disabled">Выключить</string>
     <string name="menu_share">Share</string>
-    <string name="menu_block">Block</string>
-    <string name="menu_unblock">Block</string>
-    <string name="menu_edit">Edit</string>
-    <string name="menu_delete_contact">Delete</string>
+    <string name="menu_block">Заблокировать</string>
+    <string name="menu_unblock">Разблокировать</string>
+    <string name="menu_edit">Изменить</string>
+    <string name="menu_delete_contact">Удалить</string>
 
     <string name="feature_unsupported">Эта функция будет доступна в следующей версии</string>
-    <string name="web_page">Web page</string>
+    <string name="web_page">Web страница</string>
 
     <plurals name="mute_for_n_hours">
         <item quantity="one">Отключить уведомления на %1$d час</item>
@@ -158,4 +158,5 @@
         <item quantity="few">Отключить уведомления на %1$d дня</item>
         <item quantity="many">Отключить уведомления на %1$d дней</item>
     </plurals>
+    <string name="message_joined_by_link">вступил в группу по пригласительной ссылке</string>
 </resources>
