--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -142,6 +142,7 @@
     <string name="menu_delete_contact">Delete</string>
     <string name="feature_unsupported">The feature will be supported in next release.</string>
     <string name="web_page">Web page</string>
+    <string name="user_status_bot">bot</string>
     <plurals name="auto_lock_n_minutes">
         <item quantity="one">%1$d minute</item>
         <item quantity="other">%1$d minutes</item>
