Bot emptyView + bot clickable spans in messages

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -160,4 +160,5 @@
     </plurals>
     <string name="message_joined_by_link">вступил в группу по пригласительной ссылке</string>
     <string name="user_status_bot">бот</string>
+    <string name="what_the_bot_can_do">What this bot can do?</string>
 </resources>
