--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -162,4 +162,5 @@
     <string name="user_status_bot">бот</string>
     <string name="what_the_bot_can_do">What this bot can do?</string>
     <string name="bot_about">About</string>
+    <string name="bot_add_to_group">Add to group</string>
 </resources>
