bot addition to chat

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -163,4 +163,5 @@
     <string name="what_the_bot_can_do">What this bot can do?</string>
     <string name="bot_about">About</string>
     <string name="bot_add_to_group">Add to group</string>
+    <string name="select_group">Select group</string>
 </resources>
