--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -160,10 +160,10 @@
     </plurals>
     <string name="message_joined_by_link">вступил в группу по пригласительной ссылке</string>
     <string name="user_status_bot">бот</string>
-    <string name="what_the_bot_can_do">What this bot can do?</string>
+    <string name="what_the_bot_can_do">Что этот бот может делать?</string>
     <string name="bot_about">About</string>
     <string name="bot_add_to_group">Add to group</string>
-    <string name="select_group">Select group</string>
-    <string name="slide_to_cancel">Slide to Cancel</string>
+    <string name="select_group">Выберите группу</string>
+    <string name="slide_to_cancel">Смахните чтобы отменить</string>
     <string name="message_voice">Voice</string>
 </resources>
