MyProfile: edit name

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -166,4 +166,5 @@
     <string name="select_group">Выберите группу</string>
     <string name="slide_to_cancel">Смахните чтобы отменить</string>
     <string name="message_voice">Voice</string>
+    <string name="name_not_modified">Name not modified</string>
 </resources>
