--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -150,6 +150,7 @@
     <string name="slide_to_cancel">Slide to Cancel</string>
     <string name="message_voice">Voice</string>
     <string name="name_not_modified">Name not modified</string>
+    <string name="chat_title">Chat title</string>
     <plurals name="auto_lock_n_minutes">
         <item quantity="one">%1$d minute</item>
         <item quantity="other">%1$d minutes</item>
