--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -169,4 +169,5 @@
     <string name="name_not_modified">Name not modified</string>
     <string name="chat_title">Chat title</string>
     <string name="first_name_must_be_non_empty">First name must be non-empty</string>
+    <string name="playlist">Playlist</string>
 </resources>
