--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -153,6 +153,9 @@
     <string name="chat_title">Chat title</string>
     <string name="first_name_must_be_non_empty">First name must be non-empty</string>
     <string name="playlist">Playlist</string>
+    <string name="enter_your_pass">Please enter your personal password</string>
+    <string name="password">Password</string>
+    <string name="sms_code">SMS code</string>
     <plurals name="auto_lock_n_minutes">
         <item quantity="one">%1$d minute</item>
         <item quantity="other">%1$d minutes</item>
