--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -175,4 +175,5 @@
     <string name="sms_code">SMS код</string>
     <string name="shared_media_title">Shared media</string>
     <string name="audio_files">Audio Files</string>
+    <string name="passcode_title_password">Password</string>
 </resources>
