--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -109,8 +109,11 @@
     <string name="app_name">Telegram K edition</string>
 
     <string name="enter_your_password">Enter your password to unlock</string>
+    <string name="enter_your_pincode">Enter your PIN to unlock</string>
     <string name="choose_your_password">Choose your password</string>
+    <string name="choose_your_pin">Choose your PIN</string>
     <string name="choose_your_password_2">Re-enter your new password</string>
+    <string name="choose_your_PIN_2">Re-enter your new PIN</string>
 
     <string name="menu_save_to_gallery">Save to gallery</string>
     <string name="menu_delete">Delete</string>
@@ -129,7 +132,9 @@
     <string name="auto_lock">Auto-Lock</string>
     <string name="enter_passcode_menu">Enter passcode</string>
     <string name="password_cannot_be_empty">Password cannot be empty</string>
+    <string name="pin_cannot_be_empty">PIN cannot be empty</string>
     <string name="wrong_password">Wrong password</string>
+    <string name="wrong_pin">Wrong PIN</string>
     <string name="autolock_disabled">Disabled</string>
     <string name="add_member">Add member</string>
     <string name="delete_and_leave">Delete and leave</string>
@@ -155,9 +160,11 @@
     <string name="playlist">Playlist</string>
     <string name="enter_your_pass">Please enter your personal password</string>
     <string name="password">Password</string>
+    <string name="pin">Pin</string>
     <string name="sms_code">SMS code</string>
     <string name="shared_media_title">Shared Media</string>
     <string name="audio_files">Audio Files</string>
+    <string name="passcode_title_password">Password</string>
     <plurals name="auto_lock_n_minutes">
         <item quantity="one">%1$d minute</item>
         <item quantity="other">%1$d minutes</item>
