--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -160,7 +160,7 @@
     <string name="playlist">Playlist</string>
     <string name="enter_your_pass">Please enter your personal password</string>
     <string name="password">Password</string>
-    <string name="pin">Pin</string>
+    <string name="pin">PIN</string>
     <string name="sms_code">SMS code</string>
     <string name="shared_media_title">Shared Media</string>
     <string name="audio_files">Audio Files</string>
