--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -148,15 +148,15 @@
     <string name="web_page">Web страница</string>
 
     <plurals name="mute_for_n_hours">
-        <item quantity="one">Отключить уведомления на %1$d час</item>
-        <item quantity="few">Отключить уведомления на %1$d часа</item>
-        <item quantity="many">Отключить уведомления на %1$d часов</item>
+        <item quantity="one">Отключить на %1$d час</item>
+        <item quantity="few">Отключить на %1$d часа</item>
+        <item quantity="many">Отключить на %1$d часов</item>
     </plurals>
 
     <plurals name="mute_for_n_days">
-        <item quantity="one">Отключить уведомления на %1$d день</item>
-        <item quantity="few">Отключить уведомления на %1$d дня</item>
-        <item quantity="many">Отключить уведомления на %1$d дней</item>
+        <item quantity="one">Отключить на %1$d день</item>
+        <item quantity="few">Отключить на %1$d дня</item>
+        <item quantity="many">Отключить на %1$d дней</item>
     </plurals>
     <string name="message_joined_by_link">вступил в группу по пригласительной ссылке</string>
     <string name="user_status_bot">бот</string>
