--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -191,4 +191,5 @@
     <string name="user_status_last_seen_word">был в сети</string>
     <string name="user_status_last_today_at_word">сегодня в</string>
     <string name="user_status_last_yesterday_at_word">вчера в</string>
+    <string name="user_status_empty">был в сети очень давно</string>
 </resources>
